<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textoActualizar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textoActualizar"
            android:textAlignment="center"
            android:textSize="34sp" />

        <EditText
            android:id="@+id/txt_actualizarDisco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/textoDiscoActualizar" />

        <EditText
            android:id="@+id/txt_actualizarGrupo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Grupo ->" />

        <Button
            android:id="@+id/botonActualizar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtBotonActualizar" />

        <Button
            android:id="@+id/botonVolverActualizar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textoVolver" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>