<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textoIntroducion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textoGestion"
            android:textAlignment="center"
            android:textSize="34sp" />

        <Button
            android:id="@+id/botonCambiarConsultar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="15dp"
            android:text="@string/txtBotonConsultar" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        tools:layout_editor_absoluteY="19dp">

        <Button
            android:id="@+id/botonCambiarAnadir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="50dp"
            android:layout_weight="1"
            android:text="@string/txtBotonAnnadir" />

        <Button
            android:id="@+id/botonCambiarBorrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:text="@string/txtBotonBorrar" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>