<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textoBorrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textoBorrar"
            android:textAlignment="center"
            android:textSize="34sp" />

        <EditText
            android:id="@+id/txt_borrarDisco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/txt_borrarGrupo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/botonBorrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtBotonBorrar" />

        <Button
            android:id="@+id/botonVolverBorrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textoVolver" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>